tests/ui/inline-const/const-match-pat-generic.stderr
error: constant pattern depends on a generic parameter
  --> $DIR/const-match-pat-generic.rs:7:9
   |
LL |         const { V } => {},
   |         ^^^^^^^^^^^

error: constant pattern depends on a generic parameter
  --> $DIR/const-match-pat-generic.rs:19:9
   |
LL |         const { f(V) } => {},
   |         ^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

